--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <p>Dr. Peter Phillips<br>
-Faculty of Health and Wellbeing<br>
+Faculty of Health and Science<br>
 University of Cumbria<br>
 Lancaster<br>
 LA1 3JD<br>
